--- a/PET.html
+++ b/PET.html
@@ -2,7 +2,7 @@
 <html lang="kr">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="페트병.css"/>
+    <link rel="stylesheet" href="PET.css"/>
     <title>플라스틱</title>
 </head>
 <body>
