--- a/index.html
+++ b/index.html
@@ -6,35 +6,38 @@
     <title>플라스틱</title>
 
     <div style="text-align: center; font-size: 200%;">
-        <pre><header>페트병 분리수거 방법</header></pre>
+        <pre><header>PET 분리수거 방법</header></pre>
     </div>
 </head>
 <body>
-    <!-- <div style="float:left;">
-        <button type="button" class='my_btn' onClick="location.href='PP.html'">PP</button>   
-    </div>
-    <div style="float: left;">
-        <button type="button" class='my_btn' onClick="location.href='PS.html'">PS</button>   
-    </div>
-    <div style="float: left;">
-        <button type="button" class='my_btn' onClick="location.href='PS.html'">HDPE</button>   
-    </div> -->
-    <div>   
-        <pre>
-            <p>     
-                1] 페트병에 있는 라벨을 분리합니다. 페트병이 PET 인 것과 다르게
-                   라벨은 PP로 다른 성질의 플라스틱이기 때문에 분리해야 합니다.
+    <div>
+        <div>
+            <ul>
+                <li><p target="_self"><a href="https://cwrgw3.github.io/PET/">PET</a></p></li>
+                <li><p target="_self"><a href="https://cwrgw3.github.io/HDPE/">HDPE</a></p></li>
+                <li><p target="_self"><a href="https://cwrgw3.github.io/LDPE/">LDPE</a></p></li>
+                <li><p target="_self"><a href="https://cwrgw3.github.io/PP/">PP</a></p></li>
+                <li><p target="_self"><a href="https://cwrgw3.github.io/PS/">PS</a></p></li>
+                <li><p target="_self"><a href="https://cwrgw3.github.io/PVC/">PVC</a></p></li>
+                <li><p target="_self"><a href="https://cwrgw3.github.io/OTHER/">OTHER</a></p></li>
+            </ul>
+        </div>
+        <div>
+            <pre>
+                <p>
+    1] 페트병에 있는 라벨을 분리합니다. 페트병이 PET 인 것과 다르게
+    라벨은 PP로 다른 성질의 플라스틱이기 때문에 분리해야 합니다.
 
-                2] 페트병에 만약 음료수나 이물질이 묻어있는 경우, 물로 헹구는 것이 좋습니다.
-                   이물질은 페트병이 분리수거를 하는데 방해가 됩니다.
-                   생수병의 경우 이 과정을 따로 거치지 않아도 됩니다. 
-                
-                3] 라벨을 떼고 페트병을 깨끗이 씻었다면 압착을 해서 부피를 줄여준 뒤
-                   뚜껑을 닫아 버려주면 됩니다. 뚜껑은 페트병을 파쇄하는 도중에 자연스럽게
-                   분리가 됩니다.
-            </p>
-        </pre>
+    2] 페트병에 만약 음료수나 이물질이 묻어있는 경우, 물로 헹구는 것이 좋습니다.
+    이물질은 페트병이 분리수거를 하는데 방해가 됩니다.
+    생수병의 경우 이 과정을 따로 거치지 않아도 됩니다. 
+                        
+    3] 라벨을 떼고 페트병을 깨끗이 씻었다면 압착을 해서 부피를 줄여준 뒤
+    뚜껑을 닫아 버려주면 됩니다. 뚜껑은 페트병을 파쇄하는 도중에 자연스럽게
+    분리가 됩니다.
+                </p>
+            </pre>
+        </div>
     </div>
-    <!-- <a herf="HDPE.html" target="_self">플라스틱에 대해 자세한 정보</a> -->
 </body>
 </html>
