--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     </div>
 </head>
 <body>
+    <style>
+        a { text-decoration: none; color: aliceblue;}
+        a:visited { text-decoration: none; }
+        a:hover { text-decoration: none; }
+        a:focus { text-decoration: none; }
+        a:hover, a:active { text-decoration: none; }
+    </style>
     <div>
         <div>
             <ul>
@@ -22,7 +29,7 @@
                 <li><p target="_self"><a href="https://cwrgw3.github.io/OTHER/">OTHER</a></p></li>
             </ul>
         </div>
-        <div>
+        <div style="float:left;">
             <pre>
                 <p>
     1] 페트병에 있는 라벨을 분리합니다. 페트병이 PET 인 것과 다르게
