--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="PET.css"/>
     <title>플라스틱</title>
-
+    
     <div style="text-align: center; font-size: 200%;">
         <pre><header>PET 분리수거 방법</header></pre>
     </div>
 </head>
 <body>
     <style>
-        a { text-decoration: none; color: aliceblue;}
+        a { text-decoration: none; color: rgb(240, 248, 255);}
         a:visited { text-decoration: none; }
         a:hover { text-decoration: none; }
         a:focus { text-decoration: none; }
