--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="PET.css"/>
     <title>플라스틱</title>
-    
+
     <div style="text-align: center; font-size: 200%;">
         <pre><header>PET 분리수거 방법</header></pre>
     </div>
 </head>
 <body>
     <style>
-        a { text-decoration: none; color: rgb(240, 248, 255);}
+        a { text-decoration: none; color:rgb(240, 248, 255);}
         a:visited { text-decoration: none; }
         a:hover { text-decoration: none; }
         a:focus { text-decoration: none; }
@@ -29,9 +29,11 @@
                 <li><p target="_self"><a href="https://cwrgw3.github.io/OTHER/">OTHER</a></p></li>
             </ul>
         </div>
+        <div style="text-align: center; position:relative; top: 70px;"><img src="PET.png" alt="PET image"></div>
         <div style="float:left;">
             <pre>
                 <p>
+<b>
     1] 페트병에 있는 라벨을 분리합니다. 페트병이 PET 인 것과 다르게
     라벨은 PP로 다른 성질의 플라스틱이기 때문에 분리해야 합니다.
 
@@ -42,6 +44,7 @@
     3] 라벨을 떼고 페트병을 깨끗이 씻었다면 압착을 해서 부피를 줄여준 뒤
     뚜껑을 닫아 버려주면 됩니다. 뚜껑은 페트병을 파쇄하는 도중에 자연스럽게
     분리가 됩니다.
+</b>
                 </p>
             </pre>
         </div>
