--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
             <pre>
                 <p>
 <b>
-    1] 페트병에 있는 라벨을 분리합니다. 페트병이 PET 인 것과 다르게
-    라벨은 PP로 다른 성질의 플라스틱이기 때문에 분리해야 합니다.
+    1] 페트병에 있는 라벨을 분리합니다. 페트병이 
+    PET 인 것과 다르게 라벨은 PP로 다른 성질의 
+    플라스틱이기 때문에 분리해야 합니다.
 
-    2] 페트병에 만약 음료수나 이물질이 묻어있는 경우, 물로 헹구는 것이 좋습니다.
+    2] 페트병에 만약 음료수나 이물질이 묻어있는 경우,
+    물로 헹구는 것이 좋습니다.
     이물질은 페트병이 분리수거를 하는데 방해가 됩니다.
     생수병의 경우 이 과정을 따로 거치지 않아도 됩니다. 
                         
-    3] 라벨을 떼고 페트병을 깨끗이 씻었다면 압착을 해서 부피를 줄여준 뒤
-    뚜껑을 닫아 버려주면 됩니다. 뚜껑은 페트병을 파쇄하는 도중에 자연스럽게
+    3] 라벨을 떼고 페트병을 깨끗이 씻었다면 압착을
+    해서 부피를 줄여준 뒤 뚜껑을 닫아 버려주면 됩니다.
+    뚜껑은 페트병을 파쇄하는 도중에 자연스럽게
     분리가 됩니다.
 </b>
                 </p>
