--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <div>
         <div>
             <ul>
-                <li><p target="_self"><a href="https://cwrgw3.github.io/PET/">PET</a></p></li>
-                <li><p target="_self"><a href="https://cwrgw3.github.io/HDPE/">HDPE</a></p></li>
-                <li><p target="_self"><a href="https://cwrgw3.github.io/PVC/">PVC</a></p></li>
-                <li><p target="_self"><a href="https://cwrgw3.github.io/LDPE/">LDPE</a></p></li>
-                <li><p target="_self"><a href="https://cwrgw3.github.io/PP/">PP</a></p></li>
-                <li><p target="_self"><a href="https://cwrgw3.github.io/PS/">PS</a></p></li>
-                <li><p target="_self"><a href="https://cwrgw3.github.io/OTHER/">OTHER</a></p></li>
+                <li><p target="_self"><a href="index.html">PET</a></p></li>
+                <li><p target="_self"><a href="hdpe/index.html">HDPE</a></p></li>
+                <li><p target="_self"><a href="pvc/index.html">PVC</a></p></li>
+                <li><p target="_self"><a href="ldpe/index.html">LDPE</a></p></li>
+                <li><p target="_self"><a href="pp/index.html">PP</a></p></li>
+                <li><p target="_self"><a href="ps/index.html">PS</a></p></li>
+                <li><p target="_self"><a href="other/index.html">OTHER</a></p></li>
             </ul>
         </div>
         <div style="text-align: center; position:relative; top: 70px;"><img src="PET.png" alt="PET image"></div>
